pre-finish-hw-08

--- a/index.html
+++ b/index.html
@@ -523,8 +523,10 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю
-              <a href="" class="check__link">Условия договора</a>
+              <div class="wrap-text-mod">
+                <p class="chk-text">Соглашаюсь с рассылкой и принимаю</p>
+                <a href="" class="check__link">Условия договора</a>
+              </div>
             </label>
           </div>
 
