pre-2-finish-hw-08

--- a/index.html
+++ b/index.html
@@ -53,7 +53,53 @@
             +38 096 111 11 11</a
           >
         </div>
+        <!-- 11111 -->
+        <button type="button" class="menu-open" >
+          <svg class="menu-icon-open" width="40" height="40">
+            <use href="./images/icons.svg#icon-open_navigator"></use>
+          </svg>
       </div>
+      <div class="mob-menu">
+        <div class="container">
+        <div class="nav-mob-wrap">
+           <button type="button" class="mod-close" menu-modal-close>
+          <svg class="mod-icon-close" width="40" height="40">
+            <use href="./images/icons.svg#icon-close_navigator"></use>
+          </svg>
+        </button>
+<nav class="nav-mob">
+          <ul class="mob-nav-list">
+            <li class="mob-nav-item">
+              <a href="" class="mob-nav-link">Студия</a>
+            </li>
+            <li class="mob-nav-item">
+              <a href="./portfolio.html" class="mob-nav-link">Портфолио</a>
+            </li>
+            <li class="mob-nav-item">
+              <a href="" class="mob-nav-link">Контакт</a>
+            </li>
+          </ul>
+        </nav>
+        </div>
+           
+        <div class="mob-cont-soc">
+<div class="mob-contacts">
+          <a href="tel:+380961111111" class="cont-tel">
+            +38 096 111 11 11</a>
+          <a href="mailto:info@devstudio.com" class="cont-mail"
+            >info@devstudio.com</a>
+        </div>
+
+        <ul class="menu-soc-mob">
+          <li class="bord"><a href="" class="soc-mob ">Instagram</a></li>
+          <li class="bord"><a href="" class="soc-mob">Twitter</a></li>
+          <li class="bord"><a href="" class="soc-mob">Facebook</a></li>
+          <li class="bord"><a href="" class="soc-mob">LinkedIn</a></li>
+        </ul>
+        </div>
+        
+        </div>
+          </div>
     </header>
 
     <main class="main">
